<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartGameFragment"
    android:id="@+id/fragment_start_game">

    <EditText
        android:id="@+id/team1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/team1_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team1"
        android:autofillHints="Team1 name"
        android:inputType="textCapWords" />

    <TextView
        android:id="@+id/team1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/line1"
        android:text="@string/team_one"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_challenge_text" />

    <TextView
        android:id="@+id/password_challenge_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_challenge"
        android:foregroundGravity="center"
        android:textSelectHandleRight="@font/line1"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:fontFamily="@font/line1"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/team_two"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/line1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_challenge_text" />

    <EditText
        android:id="@+id/team2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:hint="@string/team2_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team2"
        android:autofillHints="Team2 name"
        android:inputType="textCapWords" />

    <ImageView
        android:id="@+id/background"
        android:layout_width="361dp"
        android:layout_height="615dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_challenge_text"
        app:layout_constraintVertical_bias="1.0"
        tools:srcCompat="@drawable/vs_done"
        android:contentDescription="@string/background" />

    <EditText
        android:id="@+id/player4_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/player4_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/player4_image"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="player4 name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/player2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/player2_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/player2_image"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="player2 name"
        android:inputType="textCapWords" />

    <ImageView
        android:id="@+id/player1_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:src="@drawable/al2osta_3abdo_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team1_name"
        android:contentDescription="@string/player1_image" />

    <ImageView
        android:id="@+id/player3_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team2_name"
        android:src="@drawable/noso7e_icon"
        android:contentDescription="@string/player3_image" />

    <ImageView
        android:id="@+id/player4_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/mauresio_icon"
        android:contentDescription="@string/player4_image" />

    <ImageView
        android:id="@+id/player2_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/doc_icon"
        android:contentDescription="@string/player2_image" />

    <EditText
        android:id="@+id/player1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/player1_name"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1_image"
        android:autofillHints="player1 name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/player3_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="5dp"
        android:hint="@string/player3_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player3_image"
        android:autofillHints="player3 name"
        android:inputType="textCapWords" />


</androidx.constraintlayout.widget.ConstraintLayout>